--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,10 @@
     <title>React App</title>
   </head>
   <body>
-    <script src="./config.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/gh/duypham000/test_mini_app/public/config.js"
+      type="text/javascript"></script>
+    <!-- <script src="./config.js"></script> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
