--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./native_controller/config.js"></script>
+    <script src="/native_config.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
